mongodeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: grupo2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grupo2
  template:
    metadata:
      labels:
        app: grupo2
    spec:
      containers:
      - name: grupo2
        image: mongo:4.0.3
        args: ["--auth"]
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: mongo-db
            mountPath: /data/db
          - name : init-script
            mountPath: /docker-entrypoint-initdb.d
            readOnly: true
      volumes:
        - name: mongo-db
          persistentVolumeClaim:
            claimName: mongo-storage
        - name: init-script
          configMap:
             name: mongo-init-cm
             items:
              - key: mongo-init.sh
                path: mongo-init.sh
