pacmandeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-deployment
  namespace: grupo2
  labels:
    app: grupo2
spec:
  selector:
    matchLabels:
      app: grupo2
  template:
    metadata:
      labels:
        app: grupo2
    spec:
      containers:
      - name: pacman-image
        image: roxsross12/pacman:1.0.1
        ports:
        - containerPort: 8080
