svc-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: grupo2
spec:
  selector:
    app: grupo2
  ports:
  - name: mongo-port
    port: 27017
    targetPort: 27017
  type: ClusterIP
