svc-pacman.yaml
#Create a new service: name = pacman-service
#port = '80'
#targetPort = '8080'
#type: NodePort

apiVersion: v1
kind: Service
metadata:
  name: pacman-service
  namespace: grupo2
  labels:
    app: grupo2   
spec:
  selector:
    app: grupo2
  ports:
  - name: pacman-port
    port: 80
    targetPort: 8080
  type: NodePort
