ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman-ingress
  namespace: grupo2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: grupo2
spec:
  ingressClassName: nginx
  rules:
  - host: grupo2.295devops.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pacman-service
            port: 
              number: 80
